# RVC

./: .gitignore  CMakeLists.txt  README.md
cmake/: FetchCMocka.cmake
include/: add.h  commit.h  error_handling.h
src/: add.c  add.h  commit.c  commit.h  error_handling.c  error_handling.h  init.c  init.h  main.c  paths.h  utils.c  utils.h
tests/: CMakeLists.txt  main.c
